--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ packages/
 *.Designer.cs
 *.orig
 *.rej
+
+#rider user-local files (according to https://intellij-support.jetbrains.com/hc/en-us/articles/206544839-How-to-manage-projects-under-Version-Control-Systems)
+**/.idea/workspace.xml
+**/.idea/tasks.xml
