Editing on MacOS: replace ILMerge with ILRepack. v.2.0.11 (before 2.0.12) works on all platforms

--- a/Simple1C/packages.config
+++ b/Simple1C/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ILMerge" version="2.14.1208" targetFramework="net45" />
+  <package id="ILRepack" version="2.0.11" targetFramework="net45" />
   <package id="Irony" version="0.9.1" targetFramework="net45" />
   <package id="Npgsql" version="3.1.7" targetFramework="net45" />
   <package id="Remotion.Linq" version="2.0.2" targetFramework="net45" />
