initial commit. steps towards query execution

--- a/Simple1C/Simple1C.csproj
+++ b/Simple1C/Simple1C.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Impl\Sql\SqlAccess\Parsing\ParseHelpers.cs" />
     <Compile Include="Impl\Sql\SqlAccess\Parsing\QueryGrammar.cs" />
     <Compile Include="Impl\Sql\SqlAccess\Parsing\QueryParser.cs" />
+    <Compile Include="Impl\Sql\SqlAccess\Parsing\ParseException.cs" />
     <Compile Include="Impl\Sql\SqlAccess\PostgreeSqlDatabase.cs" />
     <Compile Include="Impl\Sql\SqlAccess\InMemoryDataReader.cs" />
     <Compile Include="Impl\Sql\SqlAccess\Syntax\AggregationFunction.cs" />
@@ -273,7 +274,6 @@
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>-->
-
   <Target Name="AfterBuild">
     <CreateItem Include="@(ReferencePath)" Condition="'%(CopyLocal)'=='true'">
       <Output TaskParameter="Include" ItemName="IlmergeAssemblies" />
@@ -281,8 +281,8 @@
     <PropertyGroup>
       <ILRepackCommand>"..\packages\ILRepack.2.0.11\tools\ILRepack.exe" /internalize /out:$(OutputPath)\$(AssemblyName).dll "@(IntermediateAssembly)" @(IlmergeAssemblies->'"%(FullPath)"', ' ')</ILRepackCommand>
     </PropertyGroup>
-    <Exec Condition = "'$(OS)' = 'Unix'" Command="mono $(ILRepackCommand)"/>
-    <Exec Condition = "'$(OS)' != 'Unix'" Command="$(ILRepackCommand)"/>
+    <Exec Condition="'$(OS)' = 'Unix'" Command="mono $(ILRepackCommand)" />
+    <Exec Condition="'$(OS)' != 'Unix'" Command="$(ILRepackCommand)" />
     <Delete Files="@(ReferenceCopyLocalPaths->'$(OutDir)%(DestinationSubDirectory)%(Filename)%(Extension)')" />
   </Target>
 </Project>
